# Fake-news-detector

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: 1_Text_Analyzer.py  2_URL_Analyzer.py  3_Model_Insights.py
src/data/: loader.py  preprocess.py
src/features/: vectorizer.py
src/models/: evaluate.py  predict.py  train.py  tune.py
src/ui/: components.py  theme.py
src/utils/: web_scraper.py
tests/: test_predict.py  test_preprocess.py  test_scraper.py
