[tool.poetry]
name = "fake-news-streamlit-app"
version = "0.1.0"
description = "A Streamlit application for detecting fake news through text and URL analysis."
authors = ["Paritosh Singh paritosh0180@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.0"
nltk = "^3.6.0"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"